problem of missing line

--- a/python/Hit_rate_data_processing.ipynb
+++ b/python/Hit_rate_data_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,6 +37,8 @@
     "def compute_hit_rate_one_object(df, county, city, object = 'ethnicity'):    \n",
     "    if object == 'ethnicity':\n",
     "        df_searched_cleaned = df[['year', 'subject_race', 'search_conducted', 'contraband_found']]\n",
+    "        df_searched_cleaned = df_searched_cleaned.query(\"subject_race == 'white' | subject_race == 'black'| subject_race == 'asian/pacific islander'\\\n",
+    "            | subject_race == 'hispanic'\")\n",
     "        found = pd.DataFrame(df_searched_cleaned.groupby(['year', 'subject_race'])['contraband_found'].value_counts()).rename(columns={'contraband_found' : 'nb_find'}).reset_index()\n",
     "        all = pd.DataFrame(df_searched_cleaned.groupby(['year', 'subject_race'])['search_conducted'].value_counts()).rename(columns={'search_conducted' : 'nb_search'}).reset_index()\n",
     "        found_and_all = pd.merge(left = found, right = all, left_on=['year','subject_race'], right_on = ['year', 'subject_race']).drop(['search_conducted'], axis = 1)\n",
@@ -69,6 +71,17 @@
     "        hit_rate_gender = pd.concat([hit_rate_gender, new_city_gender])\n",
     "    return hit_rate_ethnicity, hit_rate_gender\n",
     "\n",
+    "def filter_not_duplicate(df, object = 'ethni'):\n",
+    "    if object == 'ethni':\n",
+    "        dupli = pd.DataFrame(df.groupby(['year'])['subject_race'].value_counts()).rename(columns={'subject_race' : 'dupli'}).reset_index()\n",
+    "        test = pd.merge(left=df, right=dupli, left_on = ['year','subject_race'], right_on = ['year', 'subject_race'])\n",
+    "        df = test.query('dupli == 2')\n",
+    "    else :\n",
+    "        dupli = pd.DataFrame(df.groupby(['year'])['subject_sex'].value_counts()).rename(columns={'subject_sex' : 'dupli'}).reset_index()\n",
+    "        test = pd.merge(left=df, right=dupli, left_on = ['year','subject_sex'], right_on = ['year', 'subject_sex'])\n",
+    "        test = test.query('dupli == 2')\n",
+    "    return df\n",
+    "\n",
     "def compute_mean_hit_rate_by_state(path_to_folder):\n",
     "    hit_rate_ethnicity, hit_rate_gender = compute_hit_rate_multiple_cities(path_to_folder)\n",
     "    all_city_gender_mean_hit_rate = hit_rate_gender.groupby(['year', 'subject_sex', 'County'])['Hit_rate'].agg(['mean']).reset_index()\n",
@@ -77,12 +90,13 @@
     "    all_city_ethnicity_mean_hit_rate = hit_rate_ethnicity.groupby(['year', 'subject_race', 'County'])['Hit_rate'].agg(['mean']).reset_index()\n",
     "    all_city_ethnicity_mean_search_count = hit_rate_ethnicity.groupby(['year', 'subject_race'])['nb_search'].agg(['sum']).reset_index()\n",
     "    hit_rate_ethnicity_mean = pd.merge(all_city_ethnicity_mean_hit_rate, all_city_ethnicity_mean_search_count, left_on=['year', 'subject_race'], right_on=['year', 'subject_race'])\n",
-    "    return hit_rate_ethnicity_mean, hit_rate_gender_mean, hit_rate_ethnicity, hit_rate_gender\n"
+    "    return filter_not_duplicate(hit_rate_ethnicity_mean), filter_not_duplicate(hit_rate_gender_mean, object = 'gender')\\\n",
+    "        , filter_not_duplicate(hit_rate_ethnicity), filter_not_duplicate(hit_rate_gender, object = 'gender')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,27 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([2016., 2014., 2015., 2009., 2010., 2011., 2012., 2013.])"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "hit_rate_ethnicity.year.unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
