hit rate good scale

--- a/python/Hit_rate_data_processing.ipynb
+++ b/python/Hit_rate_data_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,12 +75,18 @@
     "    if object == 'ethni':\n",
     "        dupli = pd.DataFrame(df.groupby(['year'])['subject_race'].value_counts()).rename(columns={'subject_race' : 'dupli'}).reset_index()\n",
     "        test = pd.merge(left=df, right=dupli, left_on = ['year','subject_race'], right_on = ['year', 'subject_race'])\n",
-    "        df = test.query('dupli == 2')\n",
+    "        df = test.query('dupli == 1')\n",
+    "        if(len(df)!= 0):\n",
+    "            test.loc[df.index[0] + 0.5] = [df.values[0][0],df.values[0][1],'tx',0,0,2]                                 # Append list at the bottom\n",
+    "            test = test.sort_index().reset_index(drop = True)\n",
     "    else :\n",
     "        dupli = pd.DataFrame(df.groupby(['year'])['subject_sex'].value_counts()).rename(columns={'subject_sex' : 'dupli'}).reset_index()\n",
     "        test = pd.merge(left=df, right=dupli, left_on = ['year','subject_sex'], right_on = ['year', 'subject_sex'])\n",
-    "        test = test.query('dupli == 2')\n",
-    "    return df\n",
+    "        df = test.query('dupli == 1')\n",
+    "        if(len(df) !=0):\n",
+    "            test.loc[df.index[0] + 0.5] = [df.values[0][0],df.values[0][1],'tx',0,0,2]                                 # Append list at the bottom\n",
+    "            test = test.sort_index().reset_index(drop = True)\n",
+    "    return test\n",
     "\n",
     "def compute_mean_hit_rate_by_state(path_to_folder):\n",
     "    hit_rate_ethnicity, hit_rate_gender = compute_hit_rate_multiple_cities(path_to_folder)\n",
@@ -90,13 +96,12 @@
     "    all_city_ethnicity_mean_hit_rate = hit_rate_ethnicity.groupby(['year', 'subject_race', 'County'])['Hit_rate'].agg(['mean']).reset_index()\n",
     "    all_city_ethnicity_mean_search_count = hit_rate_ethnicity.groupby(['year', 'subject_race'])['nb_search'].agg(['sum']).reset_index()\n",
     "    hit_rate_ethnicity_mean = pd.merge(all_city_ethnicity_mean_hit_rate, all_city_ethnicity_mean_search_count, left_on=['year', 'subject_race'], right_on=['year', 'subject_race'])\n",
-    "    return filter_not_duplicate(hit_rate_ethnicity_mean), filter_not_duplicate(hit_rate_gender_mean, object = 'gender')\\\n",
-    "        , filter_not_duplicate(hit_rate_ethnicity), filter_not_duplicate(hit_rate_gender, object = 'gender')\n"
+    "    return filter_not_duplicate(hit_rate_ethnicity_mean), filter_not_duplicate(hit_rate_gender_mean, object = 'gender'), hit_rate_ethnicity, hit_rate_gender"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,6 +118,358 @@
     "hit_rate_gender.to_csv('../data/city/all_hit_rate_gender.csv')\n",
     "hit_rate_ethnicity_mean.to_csv('../data/city/all_hit_rate_ethnicity_mean.csv')\n",
     "hit_rate_gender_mean.to_csv('../data/city/all_hit_rate_gender_mean.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>subject_race</th>\n",
+       "      <th>County</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>sum</th>\n",
+       "      <th>dupli</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2009.0</td>\n",
+       "      <td>asian/pacific islander</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>35.416667</td>\n",
+       "      <td>394</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2009.0</td>\n",
+       "      <td>asian/pacific islander</td>\n",
+       "      <td>tx</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>394</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2009.0</td>\n",
+       "      <td>black</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>8.663283</td>\n",
+       "      <td>3278</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2009.0</td>\n",
+       "      <td>black</td>\n",
+       "      <td>tx</td>\n",
+       "      <td>22.910217</td>\n",
+       "      <td>3278</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2009.0</td>\n",
+       "      <td>hispanic</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>6.004367</td>\n",
+       "      <td>2271</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2009.0</td>\n",
+       "      <td>hispanic</td>\n",
+       "      <td>tx</td>\n",
+       "      <td>27.790433</td>\n",
+       "      <td>2271</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2009.0</td>\n",
+       "      <td>white</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>19.283747</td>\n",
+       "      <td>2348</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2009.0</td>\n",
+       "      <td>white</td>\n",
+       "      <td>tx</td>\n",
+       "      <td>23.076923</td>\n",
+       "      <td>2348</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2010.0</td>\n",
+       "      <td>asian/pacific islander</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>37.328767</td>\n",
+       "      <td>316</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2010.0</td>\n",
+       "      <td>asian/pacific islander</td>\n",
+       "      <td>tx</td>\n",
+       "      <td>12.500000</td>\n",
+       "      <td>316</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2010.0</td>\n",
+       "      <td>black</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>8.883354</td>\n",
+       "      <td>2839</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2010.0</td>\n",
+       "      <td>black</td>\n",
+       "      <td>tx</td>\n",
+       "      <td>23.720930</td>\n",
+       "      <td>2839</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2010.0</td>\n",
+       "      <td>hispanic</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>11.665005</td>\n",
+       "      <td>1705</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2010.0</td>\n",
+       "      <td>hispanic</td>\n",
+       "      <td>tx</td>\n",
+       "      <td>23.504274</td>\n",
+       "      <td>1705</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>2010.0</td>\n",
+       "      <td>white</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>27.635135</td>\n",
+       "      <td>2038</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>2010.0</td>\n",
+       "      <td>white</td>\n",
+       "      <td>tx</td>\n",
+       "      <td>22.759857</td>\n",
+       "      <td>2038</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>2011.0</td>\n",
+       "      <td>asian/pacific islander</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>28.009828</td>\n",
+       "      <td>417</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>2011.0</td>\n",
+       "      <td>asian/pacific islander</td>\n",
+       "      <td>tx</td>\n",
+       "      <td>30.000000</td>\n",
+       "      <td>417</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>2011.0</td>\n",
+       "      <td>black</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>5.999302</td>\n",
+       "      <td>3538</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>2011.0</td>\n",
+       "      <td>black</td>\n",
+       "      <td>tx</td>\n",
+       "      <td>27.421759</td>\n",
+       "      <td>3538</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>2011.0</td>\n",
+       "      <td>hispanic</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>7.008671</td>\n",
+       "      <td>2360</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>2011.0</td>\n",
+       "      <td>hispanic</td>\n",
+       "      <td>tx</td>\n",
+       "      <td>28.995902</td>\n",
+       "      <td>2360</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>2011.0</td>\n",
+       "      <td>white</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>21.572872</td>\n",
+       "      <td>1971</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>2011.0</td>\n",
+       "      <td>white</td>\n",
+       "      <td>tx</td>\n",
+       "      <td>27.008547</td>\n",
+       "      <td>1971</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>2012.0</td>\n",
+       "      <td>asian/pacific islander</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>22.123894</td>\n",
+       "      <td>226</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>2012.0</td>\n",
+       "      <td>asian/pacific islander</td>\n",
+       "      <td>tx</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>2012.0</td>\n",
+       "      <td>black</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>5.922166</td>\n",
+       "      <td>3369</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>2012.0</td>\n",
+       "      <td>black</td>\n",
+       "      <td>tx</td>\n",
+       "      <td>14.343381</td>\n",
+       "      <td>3369</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>2012.0</td>\n",
+       "      <td>hispanic</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>8.815166</td>\n",
+       "      <td>2822</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>2012.0</td>\n",
+       "      <td>hispanic</td>\n",
+       "      <td>tx</td>\n",
+       "      <td>16.604831</td>\n",
+       "      <td>2822</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      year            subject_race County       mean   sum  dupli\n",
+       "0   2009.0  asian/pacific islander     ca  35.416667   394      2\n",
+       "1   2009.0  asian/pacific islander     tx  10.000000   394      2\n",
+       "2   2009.0                   black     ca   8.663283  3278      2\n",
+       "3   2009.0                   black     tx  22.910217  3278      2\n",
+       "4   2009.0                hispanic     ca   6.004367  2271      2\n",
+       "5   2009.0                hispanic     tx  27.790433  2271      2\n",
+       "6   2009.0                   white     ca  19.283747  2348      2\n",
+       "7   2009.0                   white     tx  23.076923  2348      2\n",
+       "8   2010.0  asian/pacific islander     ca  37.328767   316      2\n",
+       "9   2010.0  asian/pacific islander     tx  12.500000   316      2\n",
+       "10  2010.0                   black     ca   8.883354  2839      2\n",
+       "11  2010.0                   black     tx  23.720930  2839      2\n",
+       "12  2010.0                hispanic     ca  11.665005  1705      2\n",
+       "13  2010.0                hispanic     tx  23.504274  1705      2\n",
+       "14  2010.0                   white     ca  27.635135  2038      2\n",
+       "15  2010.0                   white     tx  22.759857  2038      2\n",
+       "16  2011.0  asian/pacific islander     ca  28.009828   417      2\n",
+       "17  2011.0  asian/pacific islander     tx  30.000000   417      2\n",
+       "18  2011.0                   black     ca   5.999302  3538      2\n",
+       "19  2011.0                   black     tx  27.421759  3538      2\n",
+       "20  2011.0                hispanic     ca   7.008671  2360      2\n",
+       "21  2011.0                hispanic     tx  28.995902  2360      2\n",
+       "22  2011.0                   white     ca  21.572872  1971      2\n",
+       "23  2011.0                   white     tx  27.008547  1971      2\n",
+       "24  2012.0  asian/pacific islander     ca  22.123894   226      1\n",
+       "25  2012.0  asian/pacific islander     tx   0.000000     0      2\n",
+       "26  2012.0                   black     ca   5.922166  3369      2\n",
+       "27  2012.0                   black     tx  14.343381  3369      2\n",
+       "28  2012.0                hispanic     ca   8.815166  2822      2\n",
+       "29  2012.0                hispanic     tx  16.604831  2822      2"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hit_rate_ethnicity_mean.head(30)"
    ]
   },
   {
