--- a/python/data_processing.ipynb
+++ b/python/data_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,9 +50,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'df_ca = pd.read_pickle(\"../data/ca_cleaned.pkl\", compression= \"gzip\")\\ndf_ca[\\'county_name\\'] = df_ca[\\'county_name\\'].apply(lambda x : x.replace(\"Siskyou County\", \"Siskiyou County\"))\\ndf_ca[\\'county_name\\'] = df_ca[\\'county_name\\'].apply(lambda x : x.replace(\"Santa Barbera County\", \"Santa Barbara County\"))\\ndf_ca.to_pickle(\"../data/ca_cleaned.pkl\", compression= \"gzip\")'"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"df_ca = pd.read_pickle(\"../data/ca_cleaned.pkl\", compression= \"gzip\")\n",
     "df_ca['county_name'] = df_ca['county_name'].apply(lambda x : x.replace(\"Siskyou County\", \"Siskiyou County\"))\n",
@@ -83,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,6 +119,30 @@
     "        \n",
     "    return count_year\n",
     "\n",
+    "def process(df):\n",
+    "    df = df.T\n",
+    "    df.columns = df.columns.str.replace('\\xa0','')\n",
+    "    df.reset_index()\n",
+    "    column = df.columns\n",
+    "    for col in column:\n",
+    "        df[col] = df[col].str.replace('\\u202f','').values\n",
+    "        df[col] = df[col].apply(lambda x : float(x))\n",
+    "    df['asian/pacific islander'] = df['Asian alone'] + df['Native Hawaiian and Other Pacific Islander alone']\n",
+    "    df.rename(columns={'Hispanic or Latino' : 'hispanic', 'White alone' : 'white', 'Black or African American alone' : 'black'}, inplace=True)\n",
+    "    df = df[['hispanic', 'white', 'black', 'asian/pacific islander']]\n",
+    "    return df\n",
+    "\n",
+    "def population_ethnic():\n",
+    "    df = pd.read_csv('../data/DECENNIALPL2020.P2-2022-06-02T080225.csv',thousands = ' ' )\n",
+    "    df.set_index('Label (Grouping)', inplace=True)\n",
+    "    df_california = df.loc[:, df.columns.str.endswith('California')]\n",
+    "    df_texas = df.loc[:, df.columns.str.endswith('Texas')]\n",
+    "    df_california = process(df_california)\n",
+    "    df_california['county_name'] = df_california.index.str[:-19]\n",
+    "    df_texas = process(df_texas)\n",
+    "    df_texas['county_name'] = df_texas.index.str[:-14]\n",
+    "    return df_california, df_texas\n",
+    "\n",
     "def load_population(state):\n",
     "    population = pd.read_csv('../data/us_county.csv')\n",
     "    population = population.query(\"state == state\")\n",
@@ -115,60 +150,138 @@
     "    population['county'] = population['county'].str[:-7]\n",
     "    return population\n",
     "\n",
-    "def relative_arrest_computation(df_state, population, object='ethnicity'):\n",
+    "\"\"\"def relative_arrest_computation(df_state, population, object='ethnicity'):\n",
     "    if(object == 'ethnicity'):\n",
-    "        relative_arrest = pd.merge(df_state, population, left_on = 'county_name', right_on = 'county').drop(['county'], axis = 1)\n",
-    "        relative_arrest['relative_arrest'] = relative_arrest['nb_arrest'] / relative_arrest['population']\n",
+    "        relative_arrest = pd.merge(left = df_state, right =population, left_on = 'county_name', right_on = 'county_name')#.drop(['county'], axis = 1)\n",
+    "        #relative_arrest['relative_arrest'] = relative_arrest['nb_arrest'] / relative_arrest['population']\n",
     "    else:\n",
-    "        relative_arrest = pd.merge(df_state, population, left_on = 'county_name', right_on = 'county').drop(['county'], axis = 1)\n",
+    "        relative_arrest = pd.merge(left = df_state, right =population, left_on = 'county_name', right_on = 'county').drop(['county'], axis = 1)\n",
     "        relative_arrest_female = relative_arrest.query(\"subject_sex == 'female'\")\n",
     "        relative_arrest_female['relative_arrest'] = relative_arrest_female['nb_arrest'] / relative_arrest_female['female']\n",
     "        relative_arrest_male = relative_arrest.query(\"subject_sex == 'male'\")\n",
     "        relative_arrest_male['relative_arrest'] = relative_arrest_male['nb_arrest'] / relative_arrest_male['male']\n",
     "        relative_arrest = pd.concat([relative_arrest_female, relative_arrest_male])\n",
     "\n",
-    "    return relative_arrest\n",
+    "    return relative_arrest\"\"\"\n",
     "\n",
     "def create_df_one_year(path, state):\n",
     "    df = pre_process(path)\n",
     "    count_year_ethnicity = count_year_one_state(df)\n",
     "    count_year_gender = count_year_one_state(df, object = 'gender')\n",
-    "    population = load_population(state)\n",
-    "    df_ethnicity = relative_arrest_computation(count_year_ethnicity, population)\n",
-    "    df_ethnicity['state'] = state\n",
-    "    df_gender = relative_arrest_computation(count_year_gender, population, object='gender')\n",
-    "    df_gender['state'] = state\n",
     "\n",
-    "    return df_ethnicity, df_gender"
+    "    return count_year_ethnicity, count_year_gender"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_ethnicity_ca, df_gender_ca = create_df_one_year(\"../data/ca_cleaned.pkl\", 'California')"
+    "df_california, df_texas = population_ethnic()\n",
+    "count_year_ethnicity_ca, count_year_gender_ca = create_df_one_year(\"../data/ca_cleaned.pkl\", 'California')\n",
+    "count_year_ethnicity_tx, count_year_gender_tx = create_df_one_year(\"../data/tx_cleaned.pkl\", 'Texas')\n",
+    "df_ca_ethnicity = pd.merge(left = count_year_ethnicity_ca, right = df_california, left_on='county_name', right_on='county_name')\n",
+    "df_tx_ethnicity = pd.merge(left = count_year_ethnicity_tx, right = df_texas, left_on='county_name', right_on='county_name')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_ethnicity_tx, df_gender_tx = create_df_one_year(\"../data/tx_cleaned.pkl\", 'Texas')"
+    "df_ca_ethnicity['relative1'] = df_ca_ethnicity.query(\"subject_race == 'black'\")['nb_arrest']/ df_ca_ethnicity.query(\"subject_race == 'black'\")['black']\n",
+    "df_ca_ethnicity['relative2'] = df_ca_ethnicity.query(\"subject_race == 'white'\")['nb_arrest']/ df_ca_ethnicity.query(\"subject_race == 'white'\")['white']\n",
+    "df_ca_ethnicity['relative3'] = df_ca_ethnicity.query(\"subject_race == 'hispanic'\")['nb_arrest']/ df_ca_ethnicity.query(\"subject_race == 'hispanic'\")['hispanic']\n",
+    "df_ca_ethnicity['relative4'] = df_ca_ethnicity.query(\"subject_race == 'asian/pacific islander'\")['nb_arrest']/ df_ca_ethnicity.query(\"subject_race == 'asian/pacific islander'\")['asian/pacific islander']\n",
+    "df_ca_ethnicity['relative1'] = df_ca_ethnicity['relative1'].fillna(0)\n",
+    "df_ca_ethnicity['relative2'] = df_ca_ethnicity['relative2'].fillna(0)\n",
+    "df_ca_ethnicity['relative3'] = df_ca_ethnicity['relative3'].fillna(0)\n",
+    "df_ca_ethnicity['relative4'] = df_ca_ethnicity['relative4'].fillna(0)\n",
+    "df_ca_ethnicity['relative'] = df_ca_ethnicity['relative1'] + df_ca_ethnicity['relative2'] + df_ca_ethnicity['relative3'] + df_ca_ethnicity['relative4']\n",
+    "df_ca_ethnicity.drop(['relative1', 'relative2', 'relative3', 'relative4', 'hispanic','white','black','asian/pacific islander'], axis = 1, inplace = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
-    "arrest_ethnicity = pd.concat([df_ethnicity_ca, df_ethnicity_tx])\n",
-    "arrest_gender = pd.concat([df_gender_ca, df_gender_tx])\n",
-    "arrest_ethnicity.to_csv('../data/arrest_ethnicity.csv')\n",
+    "df_tx_ethnicity['relative1'] = df_tx_ethnicity.query(\"subject_race == 'black'\")['nb_arrest']/ df_tx_ethnicity.query(\"subject_race == 'black'\")['black']\n",
+    "df_tx_ethnicity['relative2'] = df_tx_ethnicity.query(\"subject_race == 'white'\")['nb_arrest']/ df_tx_ethnicity.query(\"subject_race == 'white'\")['white']\n",
+    "df_tx_ethnicity['relative3'] = df_tx_ethnicity.query(\"subject_race == 'hispanic'\")['nb_arrest']/ df_tx_ethnicity.query(\"subject_race == 'hispanic'\")['hispanic']\n",
+    "df_tx_ethnicity['relative4'] = df_tx_ethnicity.query(\"subject_race == 'asian/pacific islander'\")['nb_arrest']/ df_tx_ethnicity.query(\"subject_race == 'asian/pacific islander'\")['asian/pacific islander']\n",
+    "df_tx_ethnicity['relative1'] = df_tx_ethnicity['relative1'].fillna(0)\n",
+    "df_tx_ethnicity['relative2'] = df_tx_ethnicity['relative2'].fillna(0)\n",
+    "df_tx_ethnicity['relative3'] = df_tx_ethnicity['relative3'].fillna(0)\n",
+    "df_tx_ethnicity['relative4'] = df_tx_ethnicity['relative4'].fillna(0)\n",
+    "df_tx_ethnicity['relative'] = df_tx_ethnicity['relative1'] + df_tx_ethnicity['relative2'] + df_tx_ethnicity['relative3'] + df_tx_ethnicity['relative4']\n",
+    "df_tx_ethnicity.drop(['relative1', 'relative2', 'relative3', 'relative4', 'hispanic','white','black','asian/pacific islander'], axis = 1, inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arrest_ethnicity = pd.concat([df_ca_ethnicity, df_tx_ethnicity])\n",
+    "arrest_ethnicity.to_csv('../data/arrest_ethnicity.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "population = pd.read_csv('../data/us_county.csv')\n",
+    "population['county'] = population['county'].str[:-7]\n",
+    "population_tx = population.query(\"state == 'Texas'\")\n",
+    "population_ca = population.query(\"state == 'California'\")\n",
+    "population_tx.drop(['fips','female_percentage','long','lat','median_age','state_code','state'], axis = 1, inplace = True)\n",
+    "population_ca.drop(['fips','female_percentage','long','lat','median_age','state_code','state'], axis = 1, inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_ca_gender = pd.merge(left = count_year_gender_ca, right = population_ca, left_on='county_name', right_on='county')\n",
+    "df_ca_gender['relative1'] = df_ca_gender.query(\"subject_sex == 'female'\")['nb_arrest']/ df_ca_gender.query(\"subject_sex == 'female'\")['female']\n",
+    "df_ca_gender['relative2'] = df_ca_gender.query(\"subject_sex == 'male'\")['nb_arrest']/ df_ca_gender.query(\"subject_sex == 'male'\")['male']\n",
+    "df_ca_gender['relative1'] = df_ca_gender['relative1'].fillna(0)\n",
+    "df_ca_gender['relative2'] = df_ca_gender['relative2'].fillna(0)\n",
+    "df_ca_gender['relative'] = df_ca_gender['relative1'] + df_ca_gender['relative2'] \n",
+    "df_ca_gender.drop(['relative1', 'relative2','county','male','female','population'], axis = 1, inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_tx_gender = pd.merge(left = count_year_gender_tx, right = population_tx, left_on='county_name', right_on='county')\n",
+    "df_tx_gender['relative1'] = df_tx_gender.query(\"subject_sex == 'female'\")['nb_arrest']/ df_tx_gender.query(\"subject_sex == 'female'\")['female']\n",
+    "df_tx_gender['relative2'] = df_tx_gender.query(\"subject_sex == 'male'\")['nb_arrest']/ df_tx_gender.query(\"subject_sex == 'male'\")['male']\n",
+    "df_tx_gender['relative1'] = df_tx_gender['relative1'].fillna(0)\n",
+    "df_tx_gender['relative2'] = df_tx_gender['relative2'].fillna(0)\n",
+    "df_tx_gender['relative'] = df_tx_gender['relative1'] + df_tx_gender['relative2'] \n",
+    "df_tx_gender.drop(['relative1', 'relative2','county','male','female','population'], axis = 1, inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arrest_gender = pd.concat([df_ca_gender, df_tx_gender])\n",
     "arrest_gender.to_csv('../data/arrest_gender.csv')"
    ]
   },
